--- a/package.json
+++ b/package.json
@@ -70,5 +70,6 @@
     "prettier:fix": "prettier --write '**/*.ts' && prettier --write '**/*.json'",
     "lint": "yarn prettier:fix && forge fmt",
     "lint:check": "prettier --check '**/*.ts' && forge fmt --check"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
