fix: reduce optimizer_runs to 10000 to stay under 24KB bytecode limit
Recent feature additions (HYP_ERC20_COLLATERAL bridge type, tokenFee parameter,
ETH refunds from hooks) pushed the UniversalRouter bytecode to 25,039 bytes,
exceeding the EVM's 24,576 byte contract size limit.

Reducing optimizer_runs from 20000 to 10000 brings the bytecode to ~24,251 bytes.
This trades slightly higher runtime gas costs for deployability.

Also adds chain-specific etherscan API keys for contract verification.

--- a/foundry.toml
+++ b/foundry.toml
@@ -12,7 +12,7 @@ remappings = [
   "@openzeppelin/contracts/=lib/uniswap-v4-periphery/lib/uniswap-v4-core/lib/openzeppelin-contracts/contracts/",
 ]
 
-optimizer_runs = 20000
+optimizer_runs = 10000
 
 fs_permissions = [
   { access = "read", path = "./script/deployParameters/" },
@@ -56,10 +56,11 @@ swell = "${SWELL_RPC_URL}"
 unichain = "${UNICHAIN_RPC_URL}"
 
 [etherscan]
-base = { key = "${ETHERSCAN_API_KEY}"}
-celo = { key = "${ETHERSCAN_API_KEY}"}
-fraxtal = { key = "${ETHERSCAN_API_KEY}"}
-optimism = { key = "${ETHERSCAN_API_KEY}"}
+base = { key = "${BASE_ETHERSCAN_API_KEY}"}
+celo = { key = "${CELO_ETHERSCAN_API_KEY}"}
+fraxtal = { key = "${FRAXTAL_ETHERSCAN_API_KEY}"}
+optimism = { key = "${OPTIMISM_ETHERSCAN_API_KEY}"}
+unichain = { key = "${UNICHAIN_ETHERSCAN_API_KEY}"}
 
 [profile.hardhat] # we have to use 4.9.6 here because of hyperlane
 remappings = [
